--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/ARFurnitueTest
+MONGO_URI=mongodb+srv://mongodb:mongodb@cluster0.prr8u.mongodb.net/
 JWT_SECRET = abc123
