--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha --exit",
-    "start": "cross-env NODE_ENV=development nodemon server.js"
+    "start": "cross-env NODE_ENV=development node server.js"
   },
   "keywords": [],
   "author": "",
